--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 				<a class="menu-item" href="https://www.google.com">Item 4</a>
 			</div>
 		</div>
+		<div class="main-site">
+			<img src="image.png" alt="image" class="banner"/>
+			
+		</div>
 	
 	</body>
 </html>
