--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			</div>
 		</div>
 		<div class="main-site">
-			<img src="image.png" alt="image" class="banner"/>
-			
+			<div src="image.png" alt="image" class="banner"></div>
+			<div class="title">Star Seeker</div>
 		</div>
-	
+		<div style="height: 5000px;"></div>
 	</body>
 </html>
