--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
 		<div class="navbar">
 			<img src="SOURCE.jpg" alt="Logo" id="logo"/>
 			<div class = "menu-items">
-				<a class="menu-item" href="https://www.google.com">Home</a>
-				<a class="menu-item" href="https://www.google.com">About</a>
+				<a class="menu-item" href="index.html">Home</a>
+				<a class="menu-item" href="https://www.google.com">Explore</a>
 				<a class="menu-item" href="https://www.google.com">Item 3</a>
 				<a class="menu-item" href="https://www.google.com">Item 4</a>
 			</div>
 		</div>
+		
 		<div class="main-site">
 			<div src="image.png" alt="image" class="banner"></div>
 			<div class="title">Star Seeker</div>
+			<div class="content">
+				asdf
+			</div>
 		</div>
-		<div style="height: 5000px;"></div>
+		
 	</body>
 </html>
