--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 		</div>
 		
 		<div class="main-site">
-			<div src="image.png" alt="image" class="banner"></div>
+			<div class="banner"></div>
 			<div class="title">Star Seeker</div>
 			<div class="content">
-				asdf
+				<div class="section">
+					<img src="image.png" alt="image" class="info-image">
+				</div>
 			</div>
 		</div>
 		
