--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css">
+		<style>
+			div {
+				animation-duration: 1s;
+				background-size: cover;
+				background-position: center;
+			}
+			@keyframes fade-in {
+				0%   {opacity:0}
+				100% {opacity:1}
+			}
+		</style>
 	</head>
 	<body>
 		<div class="navbar">
@@ -13,9 +24,23 @@
 			</div>
 		</div>
 		<div class="main-site">
-			<div src="image.png" alt="image" class="banner"></div>
+			<div alt="image" class="banner"></div>
 			<div class="title">Star Seeker</div>
 		</div>
 		<div style="height: 5000px;"></div>
+		<script src="main.js"></script>
+		<script>
+			const testDiv = document.querySelector('.main-site .banner');
+        	if(!getCookie('homepage-image-url')) {
+				XHR.makeRequest("GET","https://enieg5flfilebgv.m.pipedream.net/images/get?image_id=homepage", function(r,s){
+					testDiv.style.backgroundImage = `url(${r})`;
+					setCookie('homepage-image-url', r, 0.5);
+					testDiv.style.animationName = 'fade-in';
+				}, 0)
+			} else {
+				testDiv.style.backgroundImage = `url(${getCookie('homepage-image-url')})`;
+				testDiv.style.animationName = 'fade-in';
+			}
+		</script>
 	</body>
 </html>
