--- a/shared-demo-code/index.html
+++ b/shared-demo-code/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div {
+            animation-duration: 1s;
+            background-size: cover;
+            background-position: center;
+        }
+        @keyframes imageFadeIn {
+            0%   {opacity:0}
+            100% {opacity:1}
+        }
+    </style>
 </head>
 <body>
     <form action="form.php" target="iframe-name">
@@ -13,5 +24,14 @@
         <input type="submit"/>
     </form><br/>
     <iframe name="iframe-name" width="900" height="600"></iframe>
+    <div id="test" style="box-shadow:0 0 4px teal;height:300px">test</div>
+    <script src="../main.js"></script>
+    <script>
+        const testDiv = document.getElementById('test');
+        XHR.makeRequest("GET","https://enieg5flfilebgv.m.pipedream.net/images/get?image_id=homepage", function(r,s){
+            testDiv.style.backgroundImage = `url(${r})`;
+            testDiv.style.animationName = 'imageFadeIn';
+        }, 0)
+    </script>
 </body>
 </html>
