--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 			<div class="title">Star Seeker</div>
 			<div class="content">
 				<div class="section">
-					<img src="image.png" alt="image" class="info-image">
+					<div class="info-text info-right">
+						<h1>HEADER</h1>
+						<p>j ;aklsdf aksdlf jasdklf ;aldsj;f akls fjkas df sa kdfas dfas df sadf asd; f asdf a sdf a sdf;ljk as;d kjlf jkas df as fd a sdf aksd f.</p>
+					</div>
+					<img src="image.png" alt="image" class="info-image info-left"/>
+				</div>
+				<div class="section">
+					<div class="info-text info-left">
+						<h1>HEADER</h1>
+						<p>j ;aklsdf aksdlf jasdklf ;aldsj;f akls fjkas df sa kdfas dfas df sadf asd; f asdf a sdf a sdf;ljk as;d kjlf jkas df as fd a sdf aksd f.</p>
+					</div>
+					<img src="image.png" alt="image" class="info-image info-right"/>
 				</div>
 			</div>
 		</div>
