--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<h1>HEADER</h1>
 						<p>j ;aklsdf aksdlf jasdklf ;aldsj;f akls fjkas df sa kdfas dfas df sadf asd; f asdf a sdf a sdf;ljk as;d kjlf jkas df as fd a sdf aksd f.</p>
 					</div>
-					<img src="image.png" alt="image" class="info-image info-left"/>
+					<img src="images/home-eclipse.jpg" alt="image" class="info-image info-left"/>
 				</div>
 				<div class="section">
 					<div class="info-text info-left">
