--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 			<div class="content">
 				<div class="section">
 					<div class="info-text info-right">
-						<h1>HEADER</h1>
-						<p>j ;aklsdf aksdlf jasdklf ;aldsj;f akls fjkas df sa kdfas dfas df sadf asd; f asdf a sdf a sdf;ljk as;d kjlf jkas df as fd a sdf aksd f.</p>
+						<h1>Events</h1>
+						<p>Every year, only a few astronomical events can be seen around the world. Stay updated so that you can see the next rare event.</p>
+						<a class="button" href="https://www.google.com">Sign Up</a>
 					</div>
 					<img src="images/home-eclipse.jpg" alt="image" class="info-image info-left"/>
 				</div>
