--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="section">
 					<div class="info-text info-right">
 						<h1>Events</h1>
-						<p>Every year, only a few astronomical events can be seen around the world. Stay updated so that you can see the next rare astronomical event.</p>
+						<p>Every year, only a few astronomical events can be seen around the world. Stay updated to receive updates on upcoming events.</p>
 						<center><a class="button" href="https://www.google.com">Sign Up</a></center>
 					</div>
 					<img src="images/home-eclipse.jpg" alt="image" class="info-image info-left"/>
@@ -42,7 +42,7 @@
 						<p>See upcoming astronomical events such as meteor showers, moon phases, comets, and eclipses.</p>
 						<center><a class="button" href="https://www.google.com">Learn More</a></center>
 					</div>
-					<img src="images/home-eclipse.jpg" alt="image" class="info-image info-right"/>
+					<img src="images/home-meteor-shower.jpg" alt="image" class="info-image info-right"/>
 				</div>
 			</div>
 		</div>
