--- a/register.html
+++ b/register.html
@@ -34,17 +34,19 @@
 		</div> -->
 		
 		<div class="wrapper">
-			<center><h1>Register</h1></center>
-			<center><p>Register to recieve notifications about future astronomical events.</p></center>
-			<center>
-				<div class="form">
-					<div class="text-fields">
-						<input type="text" id="name" class="text-input" placeholder="name (optional)"/>
-						<input type="text" id="email" class="text-input" placeholder="email"/>
+			<div class="centered-popout">
+				<center><h1>Register</h1></center>
+				<center><p>Register to recieve notifications about future astronomical events.</p></center>
+				<center>
+					<div class="form">
+						<div class="text-fields">
+							<input type="text" id="name" class="text-input" placeholder="name (optional)"/>
+							<input type="text" id="email" class="text-input" placeholder="email"/>
+						</div>
+						<input type="submit" id = "submit" class="submit button" value="Submit"/>
 					</div>
-					<input type="submit" id = "submit" class="submit button" value="Submit"/>
-				</div>
-			</center>
+				</center>
+			</div>
 		</div>
 		<script src="main.js"></script>
 		<script>
