--- a/register/index.html
+++ b/register/index.html
@@ -33,7 +33,10 @@
 			<!- - <div class = "menu-items"></div> - ->
 		</div> -->
 		
-		<div class="wrapper">
+		<!--Replace With Random Image-->
+		<div class = "background"><img class="background-image" src="http://selfgrowth.info/photos/cool-space-pictures-HD/top-space-photos-without-copyright3954.jpg"/></div>
+		
+		<div class="wrapper wrapper-register">
 			<div class="centered-popout">
 				<center><h1>Register</h1></center>
 				<center><p>Register to recieve notifications about future astronomical events.</p></center>
