Homepage and Register page finished

--- a/register/index.html
+++ b/register/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -34,7 +34,9 @@
 		</div> -->
 		
 		<!--Replace With Random Image-->
-		<div class = "background"><img class="background-image" src="http://selfgrowth.info/photos/cool-space-pictures-HD/top-space-photos-without-copyright3954.jpg"/></div>
+		<div class = "background">
+			<img class="background-image" src="/register/space-background.jpg"/>
+		</div>
 		
 		<div class="wrapper wrapper-register">
 			<div class="centered-popout">
@@ -51,7 +53,7 @@
 				</center>
 			</div>
 		</div>
-		<script src="main.js"></script>
+		<script src="/main.js"></script>
 		<script>
 			const testDiv = document.querySelector('.wrapper .banner');
         	if(!getCookie('homepage-image-url')) {
@@ -65,6 +67,6 @@
 				testDiv.style.animationName = 'fade-in';
 			}
 		</script>
-		<script src="nav-menu.js"></script>
+		<script src="/nav-menu.js"></script>
 	</body>
 </html>
