--- a/register/index.html
+++ b/register/index.html
@@ -45,8 +45,8 @@
 				<center>
 					<div class="form">
 						<div class="text-fields">
-							<input type="text" id="name" class="text-input" placeholder="name (optional)"/>
-							<input type="text" id="email" class="text-input" placeholder="email"/>
+							<input type="text" name="name" class="text-input" placeholder="name (optional)"/>
+							<input type="text" name="email_address" class="text-input" placeholder="email"/>
 						</div>
 						<input type="submit" id = "submit" class="submit button" value="Submit"/>
 					</div>
