--- a/registration-complete/index.html
+++ b/registration-complete/index.html
@@ -42,6 +42,7 @@
 			<div class="centered-popout">
 				<center><h1>Your Submission Has Been Received</h1></center>
 				<center><p>You will now receive notifications on upcoming astronomical events!</p></center>
+				<center><a class="button" href="/index.html">Home</a></center>
 			</div>
 		</div>
 		<script src="/main.js"></script>
