--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="info-text info-left">
 						<h1>Explore</h1>
 						<p>See upcoming astronomical events such as meteor showers, moon phases, comets, and eclipses.</p>
-						<center><a class="button" href="https://www.google.com">Learn More</a></center>
+						<center><a class="button" href="/register.html">Learn More</a></center>
 					</div>
 					<img src="images/home-meteor-shower.jpg" alt="image" class="info-image info-right"/>
 				</div>
