--- a/explore/index.html
+++ b/explore/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -10,7 +10,7 @@
 		<meta name="msapplication-TileColor" content="#2b5797">
 		<meta name="msapplication-config" content="/icons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
-		<title>Star Seeker</title>
+		<title>Star Seeker - Register</title>
 		<style>
 			div {
 				animation-duration: 1s;
@@ -33,29 +33,10 @@
 			<!- - <div class = "menu-items"></div> - ->
 		</div> -->
 		
-		<div class="wrapper">
-			<div class="banner"></div>
-			<div class="title">Star Seeker</div>
-			<div class="content">
-				<div class="section">
-					<div class="info-text info-right">
-						<h1>Events</h1>
-						<p>Every year, only a few astronomical events can be seen around the world. Register to receive text updates on upcoming events.</p>
-						<center><a class="button" href="/register/index.html">Sign Up</a></center>
-					</div>
-					<img src="images/home-eclipse.jpg" alt="image" class="info-image info-left"/>
-				</div>
-				<div class="section">
-					<div class="info-text info-left">
-						<h1>Explore</h1>
-						<p>See upcoming astronomical events such as meteor showers, moon phases, comets, and eclipses.</p>
-						<center><a class="button" href="/explore/index.html">Learn More</a></center>
-					</div>
-					<img src="images/home-meteor-shower.jpg" alt="image" class="info-image info-right"/>
-				</div>
-			</div>
-		</div>
-		<script src="main.js"></script>
+		
+		
+		
+		<script src="/main.js"></script>
 		<script>
 			const testDiv = document.querySelector('.wrapper .banner');
         	if(!getCookie('homepage-image-url')) {
@@ -69,6 +50,6 @@
 				testDiv.style.animationName = 'fade-in';
 			}
 		</script>
-		<script src="nav-menu.js"></script>
+		<script src="/nav-menu.js"></script>
 	</body>
 </html>
