--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="section">
 					<div class="info-text info-left">
 						<h1>Explore</h1>
-						<p>See upcoming astronomical events such as meteor showers, comets, and eclipses.</p>
+						<p>See upcoming astronomical events such as meteor showers and eclipses.</p>
 						<center><a class="button" href="/explore/index.html">Learn More</a></center>
 					</div>
 					<img src="images/home-meteor-shower.jpg" alt="image" class="info-image info-right"/>
