--- a/explore/index.html
+++ b/explore/index.html
@@ -38,7 +38,7 @@
 		
 		<script src="/main.js"></script>
 		<script>
-			const testDiv = document.querySelector('.wrapper .banner');
+			/*const testDiv = document.querySelector('.wrapper .banner');
         	if(!getCookie('homepage-image-url')) {
 				XHR.makeRequest("GET","https://enieg5flfilebgv.m.pipedream.net/images/get?image_id=homepage", function(r,s){
 					testDiv.style.backgroundImage = `url(${r})`;
@@ -48,7 +48,7 @@
 			} else {
 				testDiv.style.backgroundImage = `url(${getCookie('homepage-image-url')})`;
 				testDiv.style.animationName = 'fade-in';
-			}
+			}*/
 		</script>
 		<script src="/nav-menu.js"></script>
 	</body>
